Restoring more ignore setings, removing xcuserdata

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
 /Entitlements.plist
+Pods/Pods.xcodeproj/*.mode1v3
+Pods/Pods.xcodeproj/*.mode2v3
+Pods/Pods.xcodeproj/*.pbxuser
+Pods/Pods.xcodeproj/*.perspectivev3
+Pods/Pods.xcodeproj/project.xcworkspace
+Pods/Pods.xcodeproj/xcuserdata
 WordPress.xcodeproj/*.mode1v3
 WordPress.xcodeproj/*.mode2v3
 WordPress.xcodeproj/*.pbxuser
 WordPress.xcodeproj/*.perspectivev3
 WordPress.xcodeproj/project.xcworkspace
 WordPress.xcodeproj/xcuserdata
+WordPress.xcworkspace/*.mode1v3
+WordPress.xcworkspace/*.mode2v3
+WordPress.xcworkspace/*.pbxuser
+WordPress.xcworkspace/*.perspectivev3
+WordPress.xcworkspace/*.xcuserdata
+WordPress.xcworkspace/project.xcworkspace
+WordPress.xcworkspace/xcuserdata
+WordPress/Entitlements.plist
 WordPress/WordPress.xcodeproj/*.mode1v3
 WordPress/WordPress.xcodeproj/*.mode2v3
 WordPress/WordPress.xcodeproj/*.pbxuser
