Make "Save Draft" on leaving the editor actually save a draft

--- a/.gitattributes
+++ b/.gitattributes
@@ -612,6 +612,8 @@ WordPress/Classes/WelcomeViewController.h -text
 WordPress/Classes/WelcomeViewController.m -text
 WordPress/Classes/WordPress-1-2.xcmappingmodel/xcmapping.xml -text
 WordPress/Classes/WordPress.xcdatamodeld/.xccurrentversion -text
+WordPress/Classes/WordPress.xcdatamodeld/WordPress[!!-~]10.xcdatamodel/elements -text svneol=unset#unset
+WordPress/Classes/WordPress.xcdatamodeld/WordPress[!!-~]10.xcdatamodel/layout -text svneol=unset#unset
 WordPress/Classes/WordPress.xcdatamodeld/WordPress[!!-~]2.xcdatamodel/elements -text svneol=unset#unset
 WordPress/Classes/WordPress.xcdatamodeld/WordPress[!!-~]2.xcdatamodel/layout -text svneol=unset#unset
 WordPress/Classes/WordPress.xcdatamodeld/WordPress[!!-~]3.xcdatamodel/elements -text svneol=unset#unset
