Implemented remote autosaves
A post will be autosaved:

* Every 20 characters changed or so
* When you stop typing for 5 seconds
* When you tap on preview

Known issues:

* The "Discard/Save" alert when the Cancel button is tapped is shown even if the post is fully autosaved
* If you start a new post and it autosaves, choosing the "Discard" option only discards the changes since the last autosave

--- a/.gitattributes
+++ b/.gitattributes
@@ -352,6 +352,8 @@ WordPress/Classes/AddSiteViewController.h -text
 WordPress/Classes/AddSiteViewController.m -text
 WordPress/Classes/AddUsersBlogsViewController.h -text
 WordPress/Classes/AddUsersBlogsViewController.m -text
+WordPress/Classes/AutosavingIndicatorView.h -text
+WordPress/Classes/AutosavingIndicatorView.m -text
 WordPress/Classes/BetaFeedbackViewController.h -text
 WordPress/Classes/BetaFeedbackViewController.m -text
 WordPress/Classes/BetaUIWindow.h -text
