Remove unused methods from EditPostViewController.h
* Use editMode instead of isAFreshlyCreatedDraft
* Removed refreshUIForCompose
* Updated page editor methods to match post editor

--- a/.gitattributes
+++ b/.gitattributes
@@ -413,6 +413,7 @@ WordPress/Classes/EditPageViewController.h -text
 WordPress/Classes/EditPageViewController.m -text
 WordPress/Classes/EditPostViewController.h -text
 WordPress/Classes/EditPostViewController.m -text
+WordPress/Classes/EditPostViewController_Internal.h -text
 WordPress/Classes/EditSiteViewController.h -text
 WordPress/Classes/EditSiteViewController.m -text
 WordPress/Classes/FakeMigration.h -text
