--- a/.gitattributes
+++ b/.gitattributes
@@ -661,7 +661,7 @@ WordPress/Info-dev.plist -text
 WordPress/Info.plist -text
 WordPress/Resources-iPad/AddSiteViewController-iPad.xib -text
 WordPress/Resources-iPad/AddUsersBlogsViewController-iPad.xib -text
-WordPress/Resources-iPad/EditPostViewController~iPad.xib -text
+WordPress/Resources-iPad/EditPostViewController~ipad.xib -text
 WordPress/Resources-iPad/MainWindow-iPad.xib -text
 WordPress/Resources-iPad/PostMediaViewController-iPad.xib -text
 WordPress/Resources-iPad/PostViewController-iPad.xib -text
