Re-added the shortcut to 'Manage Notifications' in Notifications List.

--- a/.gitattributes
+++ b/.gitattributes
@@ -821,6 +821,8 @@ WordPress/Resources/Images/navbar_primary_button_bg_landscape_active.png -text
 WordPress/Resources/Images/navbar_primary_button_bg_landscape_active@2x.png -text
 WordPress/Resources/Images/navbar_read.png -text
 WordPress/Resources/Images/navbar_read@2x.png -text
+WordPress/Resources/Images/navbar_settings.png -text
+WordPress/Resources/Images/navbar_settings@2x.png -text
 WordPress/Resources/Images/navbar_shadow.png -text
 WordPress/Resources/Images/navbar_shadow@2x.png -text
 WordPress/Resources/Images/navbar_toggle.png -text svneol=unset#unset
